force-app/main/default/objects/ucinn_ascendv2__Service_Indicator_Value_Mapping__mdt/ucinn_ascendv2__Service_Indicator_Value_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Provides the mapping between Account and Contact fields and the Service Indicator Values used.</description>
    <label>Service Indicator Value Mapping</label>
    <pluralLabel>Service Indicator Value Mappings</pluralLabel>
</CustomObject>