force-app/main/default/objects/ucinn_ascendv2__Service_Indicator_Value_Mapping__mdt/fields/ucinn_ascendv2__Object__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Object__c</fullName>
    <label>Mapped Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>