force-app/main/default/objects/ucinn_ascendv2__Service_Indicator_Value_Mapping__mdt/listViews/ucinn_ascendv2__All.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>ucinn_ascendv2__Service_Indicator_Value_Code__c</columns>
    <columns>ucinn_ascendv2__Object__c</columns>
    <columns>ucinn_ascendv2__Field_API_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>